# cleanenv-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  test_cli_out.txt  test_out.txt
app/: cli.py
cleanenv/: cli.py
cleanenv/commands/: clean.py  restore.py  scan.py
cleanenv/core/: projects.py  scanner.py  size.py
cleanenv/services/: backup.py  requirements.py  restore.py
tests/: test_cli.py  test_projects.py  test_requirements.py  test_restore.py  test_scanner.py  test_size.py
